--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@tanzanite/wolfram-alpha": "^1.1.0",
     "@types/node": "^18.0.6",
     "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.9.1",
     "node-fetch": "^3.2.6",
     "openai": "^3.1.0",
     "wolfram-alpha-api": "^0.2.1"
