--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
     "node-fetch": "^3.2.6",
     "openai": "^3.1.0"
